<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="tools_title">Tools</string>
    <string name="more_app_title">More Apps</string>
    <string name="must_play_title">Must Play</string>
    <string name="app_name">Launcher3</string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="home_screen">Home</string>
    <string name="set_default_home_app">Set <xliff:g id="launcher_name" example="Launcher3">%1$s</xliff:g> as default home app in Settings</string>
    <string name="recent_task_option_split_screen">Split screen</string>
    <string name="split_app_info_accessibility">App info for %1$s</string>
    <string name="split_app_usage_settings">Usage settings for %1$s</string>
    <string name="save_app_pair">Save app pair</string>
    <string name="app_pair_default_title"><xliff:g id="app1" example="Chrome">%1$s</xliff:g> | <xliff:g id="app2" example="YouTube">%2$s</xliff:g></string>
    <string name="app_pair_unlaunchable_at_screen_size">This app pair isn\'t supported on this device</string>
    <string name="app_pair_needs_unfold">Unfold device to use this app pair</string>
    <string name="app_pair_not_available">App pair isn\'t available</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to move a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to move a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="widget_preview_context_description"><xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget</string>
    <string name="widget_preview_name_and_dims_content_description">
        <xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget, %2$d wide by %3$d high
    </string>
    <string name="add_item_request_drag_hint">Touch &amp; hold the widget to move it around the home screen</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="added_to_home_screen_accessibility_text"><xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget added to home screen</string>
    <string name="suggested_widgets_header_title">Suggestions</string>
    <string name="productivity_widget_recommendation_category_label">Essentials</string>
    <string name="news_widget_recommendation_category_label">News &amp; magazines</string>
    <string name="entertainment_widget_recommendation_category_label">Entertainment</string>
    <string name="social_widget_recommendation_category_label">Social</string>
    <string name="others_widget_recommendation_category_label">Suggested for you</string>
    <string name="widget_picker_right_pane_accessibility_title"><xliff:g id="selected_header" example="Calendar">%1$s</xliff:g> widgets on right, search and options on left</string>
    <string name="widgets_count">
        {count, plural, =1{# widget} other{# widgets}}
    </string>
    <string name="shortcuts_count">
        {count, plural, =1{# shortcut} other{# shortcuts}}
    </string>
    <string name="widgets_and_shortcuts_count"><xliff:g id="widgets_count" example="5 widgets">%1$s</xliff:g>, <xliff:g id="shortcuts_count" example="1 shortcut">%2$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="widgets_full_sheet_search_bar_hint">Search</string>
    <string name="widgets_full_sheet_cancel_button_description">Clear text from search box</string>
    <string name="no_widgets_available">Widgets and shortcuts aren\'t available</string>
    <string name="no_search_results">No widgets or shortcuts found</string>
    <string name="widgets_full_sheet_personal_tab">Personal</string>
    <string name="widgets_full_sheet_work_tab">Work</string>
    <string name="widget_category_conversations">Conversations</string>
    <string name="widget_category_note_taking">Note-taking</string>
    <string name="widget_add_button_label">Add</string>
    <string name="widget_add_button_content_description">Add <xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget</string>
    <string name="reconfigurable_widget_education_tip">Tap to change widget settings</string>
    <string name="widget_reconfigure_button_content_description">Change widget settings</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_loading_message">Loading apps&#8230;</string>
    <string name="all_apps_no_search_results">No apps found matching \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="label_application">App</string>
    <string name="all_apps_label">All apps</string>
    <string name="notifications_header">Notifications</string>
    <string name="long_press_shortcut_to_add">Touch &amp; hold to move a shortcut.</string>
    <string name="long_accessible_way_to_add_shortcut">Double-tap &amp; hold to move a shortcut or use custom actions.</string>
    <string name="out_of_space">No room on this home screen</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_search_results">Search results</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="install_private_system_shortcut_label">Install in private</string>
    <string name="uninstall_private_system_shortcut_label">Uninstall app</string>
    <string name="install_drop_target_label">Install</string>
    <string name="dismiss_prediction_label">Don\'t suggest app</string>
    <string name="pin_prediction">Pin Prediction</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in home.</string>
    <string name="permlab_write_settings">write home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in home.</string>
    <string name="gadget_error_text">Can\'t load widget</string>
    <string name="gadget_setup_text">Widget settings</string>
    <string name="gadget_complete_setup_text">Tap to finish setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Edit Name</string>
    <string name="disabled_app_label">Disabled <xliff:g id="app_name" example="Messenger">%1$s</xliff:g></string>
    <string name="dotted_app_label">
        {count, plural,
            =1      {{app_name} has # notification}
            other   {{app_name} has # notifications}
        }
    </string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format_exact">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g>, <xliff:g id="size" example="2">%2$d</xliff:g> items</string>
    <string name="folder_name_format_overflow">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g>, <xliff:g id="size" example="2">%2$d</xliff:g> or more items</string>
    <string name="splash_hint_1_1">Legal information</string>
    <string name="splash_hint_1_2">Please read and agree to the items below.</string>
    <string name="splash_hint_1_3">User Agreement</string>
    <string name="splash_hint_1_4">Before using this device, please carefully read theUser Agreement. lf you start to use the device, you indicate that you agree to the User Agreement.</string>
    <string name="splash_hint_1_5">User privacy security and protection</string>
    <string name="splash_hint_1_6">Before using this device, please carefully read the User Privacy Protection. lf you start to use the device, you indicate that you agree to the UserPrivacy Protection.</string>
    <string name="splash_hint_2_1">Google services</string>
    <string name="splash_hint_2_2">Tap to learn more about each service, su chas how to turn it on or off later. Data will be used according to Google\'s Privacy Policy.</string>
    <string name="splash_hint_2_3">Location</string>
    <string name="splash_hint_2_4">Use location</string>
    <string name="splash_hint_2_5">Allow apps and services with location permission to use your device\'s location.Location Accuracy uses information about wireless signals, such as Wi-Fi access points, cellular network towers, and GPS along with device sensor data, such as accelerometer and gyroscope, to estimate more accurate device location, which apps and services use to provide location-based features. Todo this, Google periodically processes information about device sensors and wireless signals near you to contribute to crowdsourced wireless signal locations.</string>
    <string name="splash_hint_2_6">Allow scanning</string>
    <string name="splash_hint_2_7">Allow apps and services to scan for Wi-Fi networks and nearby devices at anytime, even when Wi-Fi orBluetooth is off.</string>
    <string name="splash_hint_2_8">Device maintenance</string>
    <string name="splash_hint_2_9">Send usage and\ndiagnostic data</string>
    <string name="splash_hint_2_10">Help improve your Android device experience by automatically sending diagnostic, device, and app usage data to Google.This will help battery life,system and app stability.and other improvements.Some aggregate data will also help Google apps and partners, such asAndroid developers. lf your additional Web \ AppActivity setting is turned on,this data may be saved to your Google Account.</string>
    <string name="splash_hint_2_11">Install updates \ apps</string>
    <string name="splash_hint_2_12">By continuing, you agree that this device may also automatically download and install updates and apps fromGoogle, your carrier, and your device\'s manufacturer, possibly using cellular data.Data rates may apply. Some of these apps may offer in-app purchases.</string>
    <string name="splash_hint_2_13">By tapping \"Accept\", you agree to the\nGoogle Terms of Service. You also\nconfirm your selection of these Google\nservices settings. Note: The Google\nPrivacy Policy describes how data is\nhandled when using Google services.</string>
    <string name="splash_hint_btn_back">Back</string>
    <string name="splash_hint_btn_next">Next</string>
    <string name="splash_hint_btn_accept">Accept</string>
</resources>