<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:background="@color/white_50">

    <!--    Legal information-->
    <!--    Please read and agree to the items below.-->


    <!--    User Agreement-->
    <!--    Before using this device, please carefully read theUser Agreement. lf you start to use the device, youindicate that you agree to the User Agreement.-->
    <!--    View details-->
    <!--    User privacy security and protection-->
    <!--    Before using this device, please carefully readthe User Privacy Protection. lf you start to use thedevice, you indicate that you agree to the UserPrivacy Protection.-->
    <!--    View details-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_hint_1_1"
            android:textColor="@color/black_900"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/splash_hint_1_2"
            android:textColor="#666666"
            android:textSize="14sp"
            android:visibility="visible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_hint_1_3"
            android:layout_marginTop="50dp"
            android:textColor="@color/black_900"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/splash_hint_1_4"
            android:textColor="#666666"
            android:textSize="14sp"
            android:visibility="visible"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5px"
            android:background="#cccccc"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_hint_1_5"
            android:textColor="@color/black_900"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/splash_hint_1_6"
            android:textColor="#666666"
            android:textSize="14sp"
            android:visibility="visible"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5px"
            android:background="#cccccc"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/splash_hint_btn_back"
            android:gravity="center"
            android:textSize="16sp"
            android:visibility="invisible"
            android:textColor="@color/black_900"
            android:background="@drawable/round_bg_b"/>

        <View
            android:layout_width="50dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/splash_hint_btn_next"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white_50"
            android:background="@drawable/round_bg_w"/>
    </LinearLayout>
</RelativeLayout>
