<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_50">

    <!--    Legal information-->
    <!--    Please read and agree to the items below.-->


    <!--    User Agreement-->
    <!--    Before using this device, please carefully read theUser Agreement. lf you start to use the device, youindicate that you agree to the User Agreement.-->
    <!--    View details-->
    <!--    User privacy security and protection-->
    <!--    Before using this device, please carefully readthe User Privacy Protection. lf you start to use thedevice, you indicate that you agree to the UserPrivacy Protection.-->
    <!--    View details-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="80dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/white_50">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/g_glass_sprite_sheet_superg_frame"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/splash_hint_2_1"
                android:textColor="@color/black_900"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:visibility="visible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/splash_hint_2_2"
                android:textColor="#666666"
                android:textSize="14sp"
                android:visibility="visible"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/splash_hint_2_3"
                android:textColor="#666666"
                android:textSize="12sp"
                android:visibility="visible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="#cccccc"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="15dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/splash_ic_1"/>

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splash_hint_2_4"
                        android:textColor="@color/black_900"
                        android:textSize="14sp"
                        android:visibility="visible"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splash_hint_2_5"
                        android:textColor="#666666"
                        android:textSize="12sp"
                        android:visibility="visible"/>
                </LinearLayout>

                <View
                    android:layout_width="0.5px"
                    android:layout_height="50dp"
                    android:layout_marginStart="265dp"
                    android:background="#cccccc"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:theme="@style/CustomSwitchStyle"
                    android:checked="true"/>


            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="#cccccc"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/splash_ic_1"/>

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splash_hint_2_6"
                        android:textColor="@color/black_900"
                        android:textSize="14sp"
                        android:visibility="visible"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splash_hint_2_7"
                        android:textColor="#666666"
                        android:textSize="12sp"
                        android:visibility="visible"/>
                </LinearLayout>

                <View
                    android:layout_width="0.5px"
                    android:layout_height="50dp"
                    android:layout_marginStart="265dp"
                    android:background="#cccccc"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:theme="@style/CustomSwitchStyle"
                    android:checked="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/splash_hint_2_8"
                android:textColor="#666666"
                android:textSize="12sp"
                android:visibility="visible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="#cccccc"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="15dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/splash_ic_2"/>

                <LinearLayout
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splash_hint_2_9"
                        android:textColor="@color/black_900"
                        android:textSize="14sp"
                        android:visibility="visible"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splash_hint_2_10"
                        android:textColor="#666666"
                        android:textSize="12sp"
                        android:visibility="visible"/>
                </LinearLayout>

                <View
                    android:layout_width="0.5px"
                    android:layout_height="50dp"
                    android:layout_marginStart="265dp"
                    android:background="#cccccc"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:theme="@style/CustomSwitchStyle"
                    android:checked="true"/>

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="#cccccc"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/splash_ic_3"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splash_hint_2_11"
                        android:textColor="@color/black_900"
                        android:textSize="14sp"
                        android:visibility="visible"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splash_hint_2_12"
                        android:textColor="#666666"
                        android:textSize="12sp"
                        android:visibility="visible"/>
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="#cccccc"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_hint_2_13"
                android:textColor="@color/black_900"
                android:textSize="14sp"
                android:layout_marginStart="30dp"
                android:visibility="visible"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/splash_hint_btn_back"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black_900"
            android:background="@drawable/round_bg_b"/>

        <View
            android:layout_width="50dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/splash_hint_btn_accept"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white_50"
            android:background="@drawable/round_bg_w"/>

    </LinearLayout>
</RelativeLayout>
